test_programs/compile_failure/type_annotation_needed_on_struct_constructor/src/main.nr
struct Foo<T> {
}

fn main() {
    let foo = Foo {};
}
